--- a/pom.xml
+++ b/pom.xml
@@ -32,9 +32,16 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <goals>
-                    <goal>repackage</goal>
-                </goals>
+                <configuration>
+                    <mainClass>my.nvinz.rest1.Rest1</mainClass>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
